fix updates for safari on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h4.card-title {
   position: relative;
   top: 50%;
   transform: translateY(-50%); }
-  @media screen and (min-width: 641px) {
+  @media screen and (max-width: 399px) {
     .iowa-girls-code-camp-section {
       -webkit-transform: translateY(25%); } }
 
